--- a/TASVideos/Pages/Shared/_MovieModule.cshtml
+++ b/TASVideos/Pages/Shared/_MovieModule.cshtml
@@ -2,7 +2,7 @@
 
 @inject IAwards Awards 
 @{
-	var publicationAwards = await Awards.ForPublication(Model.Id);
+    var publicationAwards = await Awards.ForPublication(Model.Id);
 }
 
 @functions {
@@ -38,15 +38,20 @@
 }
 <card class="border border-primary">
 	<cardheader class="bg-bgprimary">
-		<img class="pixelart-image" condition="!string.IsNullOrWhiteSpace(Model.TierIconPath)" src="/@Model.TierIconPath" /> <h4 class="m-0"><a asp-page="View" asp-route-id="@Model.Id" class="text-decoration-none"><span class="text-dark">@Model.Title</span></a></h4>
-		<div class="pull-right">
-			@foreach (var flag in Model.Flags.Where(f => !string.IsNullOrWhiteSpace(f.IconPath)))
-			{
-				<a href="@flag.LinkPath">
-					<img class="pixelart-image" title="@flag.Name" alt="[@flag.Name]" src="/@flag.IconPath" />
-				</a>
-			}
-		</div>
+        <row>
+            <div class="pixelart-image float-left" condition="!string.IsNullOrWhiteSpace(Model.TierIconPath)">
+                <img src="/@Model.TierIconPath" />
+            </div>
+            <h4 class="col px-2"><a asp-page="View" asp-route-id="@Model.Id" class="text-decoration-none"><span class="text-dark">@Model.Title</span></a></h4>
+            <div class="float-right">
+            @foreach (var flag in Model.Flags.Where(f => !string.IsNullOrWhiteSpace(f.IconPath)))
+            {
+                <a href="@flag.LinkPath">
+                    <img class="pixelart-image" title="@flag.Name" alt="[@flag.Name]" src="/@flag.IconPath" />
+                </a>
+            }
+            </div>
+        </row>
 	</cardheader>
     <cardbody class="px-3 py-0">
         <div condition="@Model.ObsoletedById.HasValue" class="col card-subtitle text-danger my-2">
@@ -73,6 +78,12 @@
                 <a asp-page="/Publications/View" asp-page-handler="Download" asp-route-id="@Model.Id" class="btn btn-primary btn-sm mt-1">Download (@System.IO.Path.GetExtension(Model.MovieFileName))</a>
                 <br />
                 <a asp-page="/Submissions/View" asp-route-id="@Model.SubmissionId" class="btn btn-secondary btn-sm mt-1">Submission</a>
+                <a condition="@Model.TopicId > 0"
+                   asp-page="/Forum/Topics/Index"
+                   asp-route-id="@Model.TopicId"
+                   class="btn btn-secondary btn-sm mt-1">
+                    Discuss
+                </a>
                 <br />
                 <a permission="EditPublicationMetaData"
                    asp-page="Edit"
@@ -82,12 +93,6 @@
                    asp-page="/Publications/Catalog"
                    asp-route-id="@Model.Id"
                    class="btn btn-secondary btn-sm mt-1">Catalog</a>
-                <a condition="@Model.TopicId > 0"
-                   asp-page="/Forum/Topics/Index"
-                   asp-route-id="@Model.TopicId"
-                   class="btn btn-secondary btn-sm mt-1">
-                    Discuss
-                </a>
                 <a asp-page="/Games/PublicationHistory"
                    asp-route-id="@Model.GameId"
                    asp-route-highlight="@Model.Id"
@@ -135,16 +140,17 @@
             }
         </row>
         <row class="mb-2">
-            <div class="col-auto">
-                <small condition="Model.GenreTags.Any()">
-                    Genre:<br />
+            <div condition="Model.GenreTags.Any()" class="col-auto">
+                <small>
+                    Genres:<br />
                     @foreach (var genre in Model.GenreTags)
                     {
-                        <a href="/Movies-@genre.Code">@genre.DisplayName</a>
+                        <a href="/Movies-@genre.Code" class="ml-2">@genre.DisplayName</a><br />
                     }
-                    <br />
                 </small>
-                <small condition="Model.Tags.Any()">
+            </div>
+            <div condition="Model.Tags.Any()" class="col-auto">
+                <small>
                     Tags:<br />
                     @foreach (var tag in Model.Tags)
                     {
@@ -152,28 +158,31 @@
                     }
                 </small>
             </div>
-            <a class="col-lg-4" condition="@(!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl))" href="@Model.MirrorSiteUrl">A/V file via Mirror</a>
             <div class="col-auto">
-                <div condition="Model.MovieFileLinks.Any()" class="col-lg-4">
-                    <div class="mt-2">
-                        @foreach (var file in Model.MovieFileLinks)
+                <small condition="!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl) || Model.TorrentLinks.Any()">
+                    A/V files:<br />
+                    <a condition="@(!string.IsNullOrWhiteSpace(Model.MirrorSiteUrl))" href="@Model.MirrorSiteUrl" class="ml-2">A/V file via Mirror<br /></a>
+                    <span condition="Model.TorrentLinks.Any()">
+                        @foreach (var torrent in Model.TorrentLinks)
                         {
-                            <a title="@file.Path" asp-page="/Publications/View" asp-page-handler="DownloadAdditional" asp-route-fileId="@file.Id">(@file.Description)</a>
+                            <a href="~/torrent/@torrent.Path" class="ml-2">A/V file via BitTorrent @TorrentRemark(torrent.Path, torrent.Id)</a>
+                            <br />
                         }
-                    </div>
-                </div>
-                <small condition="Model.TorrentLinks.Any()">
-                    Torrents:<br />
-                    @foreach (var torrent in Model.TorrentLinks)
-                    {
-                        <a href="~/torrent/@torrent.Path" class="ml-2">A/V file via BitTorrent @TorrentRemark(torrent.Path, torrent.Id)</a>
-                        <br />
-                    }
+                    </span>
                 </small>
             </div>
             <div class="col-auto">
                 <small condition="!string.IsNullOrWhiteSpace(Model.EmulatorVersion)">
                     Emulator Version:<br /><span class="ml-2">@Model.EmulatorVersion</span>
+                </small>
+            </div>
+            <div condition="Model.MovieFileLinks.Any()" class="col-auto">
+                <small>
+                    Additional Downloads:<br />
+                    @foreach (var file in Model.MovieFileLinks)
+                    {
+                        <a class="ml-2" title="@file.Path" asp-page="/Publications/View" asp-page-handler="DownloadAdditional" asp-route-fileId="@file.Id">(@file.Description)</a>
+                    }
                 </small>
             </div>
         </row>
