--- a/TASVideos/Pages/Shared/_Award.cshtml
+++ b/TASVideos/Pages/Shared/_Award.cshtml
@@ -6,7 +6,7 @@
 	string awardName = $"{Model.ShortName}_{shortYear.ToString()}";
 }
 <a href="/Awards/@(longYear.ToString())#@(Model.ShortName)_@(shortYear)" title="Award - @Model.Description">
-	<img style="max-height: 40px; max-width: 40px;" 
+	<img style="max-height: 48px;" 
 		 srcset="/awards/@(awardName).png .5x,
 		 /awards/@(awardName)-2x.png 1x,
 		 /awards/@(awardName)-4x.png 2x"
