--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 				<div class="container">
 					<div class="d-lg-flex">
-						<div class="mr-auto">
+						<div class="me-auto">
 							<partial name="_NavBarPartial" />
 						</div>
 						<div>
