--- a/TASVideos/Pages/Forum/Posts/User.cshtml
+++ b/TASVideos/Pages/Forum/Posts/User.cshtml
@@ -15,18 +15,18 @@
 		<cardheader>
 			<row>
 				<div class="col-4 border-end">
-					<h5>@Model.UserName (<a href="/Forum/p/@(post.Id)#@(post.Id)">Actual Post</a>)</h5>
+					<h5>@Model.UserName</h5>
 				</div>
 				<div class="col-8 pt-0 pb-0">
 					<small style="display: inline-block">
-						<a id="@post.Id" href="/Forum/Post/@(post.Id)#@post.Id" title="Link to this post" class="float-start"><i class="fa fa-bookmark-o"></i></a>
+						<a id="@post.Id" href="/Forum/p/@(post.Id)#@post.Id" title="Link to this post" class="float-start"><i class="fa fa-bookmark-o"></i></a>
 						Posted: @post.CreateTimestamp
 						<span condition="!string.IsNullOrWhiteSpace(post.Subject)">Post subject: @post.Subject</span>
 					</small>
 					<small class="pull-end">
-						<a asp-page="/Forum/Subforum" asp-route-id="@post.ForumId">@Html.Raw(post.ForumName)</a>
+						<a asp-page="/Forum/Subforum/Index" asp-route-id="@post.ForumId">@Html.Raw(post.ForumName)</a>
 						 -> 
-						<a asp-page="/Forum/Topics" asp-route-id="@post.TopicId">@post.TopicTitle</a>
+						<a asp-page="/Forum/Topics/Index" asp-route-id="@post.TopicId">@post.TopicTitle</a>
 					</small>
 				</div>
 			</row>
