--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -129,8 +129,8 @@ article.wiki table {
 }
 
 .forum-post-highlight {
-	border: solid 3px;
-	border-color: var(--bs-info);
+	border: solid 2px !important;
+	border-color: var(--bs-warning) !important;
 	box-shadow: var(--bs-gray-400) 0px 8px 16px;
 }
 
