--- a/TASVideos/Pages/Shared/_Layout.cshtml
+++ b/TASVideos/Pages/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarCollapse">
 				<div class="container">
-					<div class="d-lg-flex">
+					<div class="d-flex">
 						<div class="me-auto">
 							<partial name="_NavBarPartial" />
 						</div>
