--- a/TASVideos/Pages/Shared/Components/FrontpageSubmissionList/Default.cshtml
+++ b/TASVideos/Pages/Shared/Components/FrontpageSubmissionList/Default.cshtml
@@ -2,21 +2,19 @@
 <div class="table-container">
 	<table class="table table-striped table-bordered table-sm">
 		<tr>
+			<th>@Html.DisplayNameFor(m => m.First().Submitted)</th>
 			<th>@Html.DisplayNameFor(m => m.First().GameName)</th>
-			<th>@Html.DisplayNameFor(m => m.First().Branch)</th>
 			<th>@Html.DisplayNameFor(m => m.First().Time)</th>
 			<th>@Html.DisplayNameFor(m => m.First().Author)</th>
-			<th>@Html.DisplayNameFor(m => m.First().Submitted)</th>
 			<th>@Html.DisplayNameFor(m => m.First().Status)</th>
 		</tr>
 		@foreach (var item in Model)
 		{
 			<tr>
-				<td><sub-link id="item.Id">@item.System @item.GameName @(!string.IsNullOrWhiteSpace(item.Branch) ? $"\"{item.Branch}\"" : "")</sub-link></td>
-				<td>@item.Branch</td>
-				<td>@(item.Time.ToStringWithOptionalDaysAndHours())</td>
-				<td>@item.Author</td>
 				<td><timezone-convert asp-for="@item.Submitted" date-only="true" /></td>
+				<td>@item.System @item.GameName @(!string.IsNullOrWhiteSpace(item.Branch) ? $"\"{item.Branch}\"" : "")</td>
+				<td><sub-link id="item.Id">@(item.Time.ToStringWithOptionalDaysAndHours())</sub-link></td>
+				<td>@item.Author</td>
 				<td>@item.Status.EnumDisplayName()</td>
 			</tr>
 		}
