--- a/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
+++ b/TASVideos/Pages/Forum/Topics/_TopicPost.cshtml
@@ -10,6 +10,7 @@
 					   class="float-start text-decoration-none text-dark">
 						<i class="fa fa-bookmark-o"></i>
 						Posted: <timezone-convert asp-for="@Model.CreateTimestamp" />
+						<span condition="@(Model.CreateTimestamp != Model.LastUpdateTimestamp)"><br />(Edited: <timezone-convert asp-for="@Model.CreateTimestamp" />)</span>
 					</a>
 				</small>
 			</div>
