--- a/TASVideos/Pages/Shared/_NavBarPartial.cshtml
+++ b/TASVideos/Pages/Shared/_NavBarPartial.cshtml
@@ -1,31 +1,31 @@
-<navbar class="flex-wrap me-2 me-md-0">
-	<nav-dropdown activate="<b>Home</b>">
+<navbar class="flex-wrap me-2 me-md-0 fw-bold">
+	<nav-dropdown activate="Home">
 		<a class="dropdown-item" href="/">Home</a>
 		<a class="dropdown-item" href="/WelcomeToTASVideos">Welcome</a>
 		<a class="dropdown-item" href="/News">News</a>
 	</nav-dropdown>
 	<nav-item activate="Movies">
-		<a class="nav-link" href="/Movies"><b>Movies</b></a>
+		<a class="nav-link" href="/Movies">Movies</a>
 	</nav-item>
 	<nav-item activate="Game Resources">
-		<a class="nav-link" href="/GameResources"><b>Game&nbsp;Resources</b></a>
+		<a class="nav-link" href="/GameResources">Game&nbsp;Resources</a>
 	</nav-item>
 	<nav-item activate="ArticleIndex">
-		<a class="nav-link" href="/ArticleIndex"><b>Articles</b></a>
+		<a class="nav-link" href="/ArticleIndex">Articles</a>
 	</nav-item>
 	<nav-item activate="Emulators">
-		<a class="nav-link" href="/EmulatorResources"><b>Emulators</b></a>
+		<a class="nav-link" href="/EmulatorResources">Emulators</a>
 	</nav-item>
 	<nav-item activate="Submissions">
-		<a class="nav-link" asp-page="/Submissions/Index"><b>Submissions</b></a>
+		<a class="nav-link" asp-page="/Submissions/Index">Submissions</a>
 	</nav-item>
 	<nav-item activate="Forum">
-		<a class="nav-link" asp-page="/Forum/Index"><b>Forum</b></a>
+		<a class="nav-link" asp-page="/Forum/Index">Forum</a>
 	</nav-item>
 	<nav-item activate="Staff">
-		<a class="nav-link" href="/Users"><b>Staff</b></a>
+		<a class="nav-link" href="/Users">Staff</a>
 	</nav-item>
-	<nav-dropdown activate="<b>Admin</b>"
+	<nav-dropdown activate="Admin"
 				  permissions="new[] { PermissionTo.ViewPrivateUserData, PermissionTo.EditUsers, PermissionTo.EditRoles, PermissionTo.TagMaintenance, PermissionTo.CatalogMovies }">
 		<a class="dropdown-item" href="/MediaPosts">Media Posts</a>
 		<a permissions="new[] { PermissionTo.ViewPrivateUserData, PermissionTo.EditUsers }" class="dropdown-item" asp-page="/Users/List">Users</a>
@@ -36,7 +36,7 @@
 		<a permission="FlagMaintenance" class="dropdown-item" asp-page="/Flags/Index">Flag Maintenance</a>
 		<a Permission="TierMaintenance" class="dropdown-item" asp-page="/Tiers/Index">Tier Maintenance</a>
 	</nav-dropdown>
-	<nav-dropdown activate="<b>Wiki</b>"
+	<nav-dropdown activate="Wiki"
 				  permissions="new[] { PermissionTo.EditWikiPages, PermissionTo.EditSystemPages, PermissionTo.MoveWikiPages, PermissionTo.DeleteWikiPages }">
 		<a class="dropdown-item" href="/SandBox">SandBox</a>
 		<a class="dropdown-item" href="/RecentChanges">Recent Changes</a>
