--- a/TASVideos/Pages/Forum/Posts/Create.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Create.cshtml
@@ -3,9 +3,19 @@
 @{
 	ViewData["Title"] = $"Posting to Topic: {Model.Post.TopicTitle}";
 }
-<partial Name="_ForumHeader" />
-<h4>Posting to Topic: <a asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId">@Model.Post.TopicTitle</a></h4>
 
+@section PageTitle {
+	<div class="container mb-2">
+		<h1>Posting to Topic: <a asp-page="/Forum/Topics/Index" asp-route-id="@Model.TopicId">@Model.Post.TopicTitle</a></h1>
+	</div>
+}
+<show-more max-height="0" show-text="Show previous posts" reverse>
+	@foreach (var post in Model.PreviousPosts)
+	{
+		<partial name="_TopicMiniPost" model="post" />
+	}
+</show-more>
+<br />
 <form method="POST">
 	<input type="hidden" asp-for="Post.TopicTitle" />
 	<row>
