remove all manual post fragments

--- a/TASVideos/Pages/Forum/Subforum/Index.cshtml
+++ b/TASVideos/Pages/Forum/Subforum/Index.cshtml
@@ -68,7 +68,7 @@
 					{
 						<timezone-convert asp-for="@topic.LastPostDateTime" /> <br />
 						<profile-link username="@topic.LastPostUserName"></profile-link>
-						<a href="/Forum/Posts/@topic.LastPostId#@topic.LastPostId" class="fa fa-arrow-circle-right" />
+						<a href="/Forum/Posts/@topic.LastPostId" class="fa fa-arrow-circle-right" />
 					}
 				</td>
 			</tr>
