--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -364,11 +364,15 @@ tt {
 	unicode-bidi: bidi-override;
 }
 
-tt, code, kbd, pre, samp {
+tt, code, kbd, pre, samp, blockquote {
 	background: var(--bs-gray-400);
 	border-radius: 5px;
 	padding: 0.125rem 0.375rem;
 	font-size: 85%;
+}
+
+blockquote {
+	font-style: italic;
 }
 
 pre code {
