--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -212,7 +212,11 @@ article.wiki, .postbody {
 	}
 
 	.highlight {
-		background-color: var(--bs-light);
+		background-color: var(--bs-yellow);
+		color: black;
+		border-radius: 5px;
+		padding: 0.125rem 0.375rem;
+		font-size: 85%;
 	}
 }
 
