--- a/TASVideos/wwwroot/css/partials/_customizations.scss
+++ b/TASVideos/wwwroot/css/partials/_customizations.scss
@@ -374,3 +374,10 @@ tt, code, kbd, pre, samp {
 pre code {
 	padding: 0;
 }
+
+dt {
+	background: var(--cardsecondary);
+	border-radius: 5px;
+	padding: 0.125rem 0.375rem;
+	font-size: 85%;
+}
