--- a/TASVideos/Pages/Forum/Posts/Edit.cshtml
+++ b/TASVideos/Pages/Forum/Posts/Edit.cshtml
@@ -1,10 +1,20 @@
 ﻿@page "{id}"
 @model EditModel
 @{
-	ViewData["Title"] = $"Editing Post for Topic: {Model.Post.TopicTitle}";
+	ViewData["Title"] = $"Editing Post in Topic: {Model.Post.TopicTitle}";
 }
-<partial Name="_ForumHeader" />
-<h4>Editing Post for Topic: <a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Post.TopicId">@Model.Post.TopicTitle</a></h4>
+
+@section PageTitle {
+	<div class="container mb-2">
+		<h1>Editing Post in Topic: <a asp-page="/Forum/Topics/Index" asp-route-id="@Model.Post.TopicId">@Model.Post.TopicTitle</a></h1>
+	</div>
+}
+<show-more max-height="0" show-text="Show previous posts" reverse condition="@Model.PreviousPosts.Any()" class="mb-2">
+	@foreach (var post in Model.PreviousPosts)
+	{
+		<partial name="_TopicMiniPost" model="post" />
+	}
+</show-more>
 <div class="alert alert-light p-0">
 	<card>
 		<cardheader>
@@ -14,7 +24,7 @@
 				</div>
 				<div class="col-8 pt-0 pb-0">
 					<small>
-						Posted: <timezone-convert asp-for="@Model.Post.CreateTimestamp" /> 
+						Posted: <timezone-convert asp-for="@Model.Post.CreateTimestamp" />
 						<span condition="!Model.Post.IsFirstPost && !string.IsNullOrWhiteSpace(Model.Post.Subject)">Post subject: @Model.Post.Subject</span>
 					</small>
 				</div>
