--- a/TASVideos/Pages/Publications/View.cshtml
+++ b/TASVideos/Pages/Publications/View.cshtml
@@ -11,6 +11,7 @@
 	<meta property="og:description" content="@Model.Publication.Title" />
 	<meta property="og:url" content="@HttpContext.Request.ToUrl()" />
 	<meta property="og:image" content="@($"{HttpContext.Request.ToBaseUrl()}/media/{Model.Publication.Screenshot.Path}")" />
+	<meta property="twitter:card" content="summary_large_image" />
 }
 
 @section PageTitle { }
