--- a/TASVideos/Pages/Submissions/View.cshtml
+++ b/TASVideos/Pages/Submissions/View.cshtml
@@ -53,8 +53,8 @@
 @section Header {
 	<meta property="og:type" content="website" />
 	<meta property="og:site_name" content="TASVideos" />
-	<meta property="og:title" content="@($"Submission #{Model.Id}")" />
-	<meta property="og:description" content="@(Model.Submission.Title)" />
+	<meta property="og:title" content="@(Model.Submission.Title)" />
+	<meta property="og:description" content="@($"Submission #{Model.Id} from {Model.Submission.Submitted.ToString("yyyy-MM-dd", System.Globalization.CultureInfo.InvariantCulture)}")" />
 	<meta property="og:url" content="@HttpContext.Request.ToUrl()" />
 	<meta property="og:image" content="@openGraphEmbedImage" />
 	@if (!string.IsNullOrWhiteSpace(youtubeEmbedImage)) {
