--- a/TASVideos/Pages/Games/Edit.cshtml
+++ b/TASVideos/Pages/Games/Edit.cshtml
@@ -38,9 +38,9 @@
 		</div>
 		<div class="col-lg-6">
 			<form-group>
-				<label asp-for="Game.YoutubeTags"></label>
-				<input type="text" asp-for="Game.YoutubeTags" class="form-control" autocomplete="off" spellcheck="false" />
-				<span asp-validation-for="Game.YoutubeTags" class="text-danger"></span>
+				<label asp-for="Game.Aliases"></label>
+				<input type="text" asp-for="Game.Aliases" class="form-control" autocomplete="off" spellcheck="false" />
+				<span asp-validation-for="Game.Aliases" class="text-danger"></span>
 			</form-group>
 			<form-group>
 				<label asp-for="Game.ScreenshotUrl"></label>
